# kea-gfx

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  example.avif  rust-toolchain.toml
kea_gpu/: Cargo.toml
kea_gpu/src/: features.rs  kea.rs  lib.rs  presenter.rs  window.rs
kea_gpu/src/commands/: buffer.rs  mod.rs  pool.rs  recorder.rs
kea_gpu/src/core/: buffer.rs  command.rs  mod.rs  pipeline.rs  shaders.rs  surface.rs  swapchain.rs  sync.rs
kea_gpu/src/core/device/: device.rs  physical_device.rs  queue_family.rs
kea_gpu/src/core/rt/: acceleration_structure.rs
kea_gpu/src/debug/: feature.rs  features.rs  instance_extension.rs  messenger.rs  mod.rs
kea_gpu/src/descriptors/: descriptor_set.rs  mod.rs
kea_gpu/src/device/: device.rs  extensions.rs  initialization.rs  mod.rs  physical_device.rs  queue_family.rs
kea_gpu/src/gpu/: command.rs  mod.rs  pipeline.rs  shaders.rs
kea_gpu/src/gpu/device/: device.rs  physical_device.rs  queue_family.rs
kea_gpu/src/instance/: config.rs  extensions.rs  mod.rs  vulkan_instance.rs
kea_gpu/src/pipelines/: mod.rs  pipeline.rs  pipeline_layout.rs
kea_gpu/src/presentation/: feature.rs  instance_extension.rs  mod.rs  physical_device.rs  presenter.rs  surface.rs  swapchain.rs  window.rs
kea_gpu/src/queues/: mod.rs  queue.rs  submission.rs
kea_gpu/src/ray_tracing/: acceleration_structure.rs  commands.rs  feature.rs  mod.rs  physical_device.rs  ray_tracing_pipeline.rs  shader_binding_table.rs
kea_gpu/src/ray_tracing/acceleration_structures/: acceleration_structure.rs  build.rs  description.rs  geometry.rs  mod.rs  scratch_buffer.rs
kea_gpu/src/ray_tracing/scenes/: acceleration_structure.rs  geometry.rs  geometry_instance.rs  mod.rs  scene.rs  scratch_buffer.rs
kea_gpu/src/shaders/: Cargo.toml  mod.rs  shader_groups.rs  shader_module.rs
kea_gpu/src/shaders/src/: lib.rs
kea_gpu/src/slots/: mod.rs  slot_bindings.rs  slot_layout.rs
kea_gpu/src/storage/: commands.rs  memory.rs  mod.rs
kea_gpu/src/storage/buffers/: aligned_buffer.rs  allocated_buffer.rs  buffer.rs  mod.rs  transfer_buffer.rs  unallocated_buffer.rs
kea_gpu/src/storage/images/: image.rs  image_view.rs  mod.rs  unallocated_image.rs
kea_gpu/src/surfaces/: feature.rs
kea_gpu/src/swapchain/: feature.rs
kea_gpu/src/sync/: fence.rs  mod.rs  semaphore.rs
kea_gpu_shaderlib/: Cargo.toml
kea_gpu_shaderlib/src/: lib.rs  ray.rs  shaders.rs
kea_gpu_shaderlib/src/slots/: mappings.rs  mod.rs  slot.rs  types.rs
kea_renderer/: Cargo.toml  build.rs
kea_renderer/src/: main.rs  path_tracer.rs
kea_renderer/src/scenes/: basic_shapes.rs  examples.rs  mod.rs  scene.rs
kea_renderer_shaders/: Cargo.toml
kea_renderer_shaders/src/: entrypoints.rs  lib.rs  payload.rs  sphere.rs
kea_renderer_shaders/src/boxes/: boxo.rs  entrypoints.rs  mod.rs
kea_renderer_shaders/src/cameras/: camera.rs  mod.rs
kea_renderer_shaders/src/lights/: point_light.rs
kea_renderer_shaders/src/materials/: material.rs
kea_renderer_shaders/src/path_tracer/: entrypoints.rs  mod.rs  rand.rs
kea_renderer_shaders/src/spheres/: entrypoints.rs  mod.rs  sphere.rs
kea_renderer_shaders/src/triangles/: entrypoints.rs  mesh.rs  mod.rs
src/: kea.rs  main.rs  path_tracer.rs  presenter.rs  rasterizer.rs
src/gpu/: buffer.rs  command.rs  descriptor_set.rs  device.rs  mod.rs  physical_device.rs  pipeline.rs  rasterization_pipeline.rs  rasterizer.rs  shader_module.rs  shaders.rs  surface.rs  swapchain.rs  sync.rs  vulkan.rs
src/gpu/device/: device.rs  mod.rs
src/gpu/rt/: acceleration_structure.rs  mod.rs  shader_binding_table.rs
src/shaders/src/: lib.rs
