[package]
name = "kea_gpu"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle="0.5.0"
winit = "0.27.4"
log = "0.4.17"
gpu-allocator = "0.21.0"
glam = "0.22.0"
memoffset = "0.7.1"
num-traits = "0.2.15"
downcast-rs = "1.2.0"
spirv-builder = "0.4.0-alpha.17"

kea_gpu_shaderlib = { path = "../kea_gpu_shaderlib" }
