[package]
name = "kea_gpu"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
raw-window-handle="0.5.0"
winit = "0.28.1"
log = "0.4.17"
gpu-allocator = "0.22.0"
memoffset = "0.8.0"
num-traits = "0.2.15"
downcast-rs = "1.2.0"
glam = "0.32.1"

kea_gpu_shaderlib = { path = "../kea_gpu_shaderlib" }
