[package]
name = "kea_renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
winit = "0.28.1"
log = "0.4.17"
env_logger = "0.10.0"
gpu-allocator = "0.22.0"
memoffset = "0.8.0"
bevy_ecs = "0.10.0"
spirv-std = "0.6.0"

kea_gpu = { path = "../kea_gpu" }
kea_gpu_shaderlib = { path = "../kea_gpu_shaderlib" }
kea_renderer_shaders = { path = "../kea_renderer_shaders" }
