[package]
name = "kea_renderer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
winit = "0.28.1"
log = "0.4.29"
env_logger = "0.11.10"
gpu-allocator = "0.22.0"
memoffset = "0.9.1"
bevy_ecs = "0.18.1"
glam = "0.32.1"

kea_gpu = { path = "../kea_gpu" }
kea_gpu_shaderlib = { path = "../kea_gpu_shaderlib" }
kea_renderer_shaders = { path = "../kea_renderer_shaders" }

[build-dependencies]
cargo-gpu-install = "0.10.0-alpha.1"
anyhow = "1"
