[package]
name = "kea_renderer_shaders"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
kea_gpu_shaderlib = { path = "../kea_gpu_shaderlib" }
spirv-std = "0.10.0-alpha.1"

[package.metadata.rust-gpu.build]
target = "spirv-unknown-vulkan1.2"
capabilities = ["RayTracingKHR", "Int64", "RayTracingPositionFetchKHR"]
extensions = [
    "SPV_KHR_ray_tracing",
    "SPV_KHR_non_semantic_info",
    "SPV_KHR_ray_tracing_position_fetch",
]
multimodule = true
spirv-metadata = "Full"
