[package]
name = "kea_renderer_shaders"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
kea_gpu_shaderlib = { path = "../kea_gpu_shaderlib" }
spirv-std = "0.10.0-alpha.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_arch, values("spirv"))'] }

[package.metadata.rust-gpu.build]
target = "spirv-unknown-vulkan1.2"
capabilities = ["RayTracingKHR", "Int64"]
extensions = ["SPV_KHR_ray_tracing", "SPV_KHR_non_semantic_info"]
multimodule = true
spirv-metadata = "Full"
